added security files

--- a/jaggery.conf
+++ b/jaggery.conf
@@ -1,6 +1,6 @@
 {
-"displayName":"WSO2 Hardware Repository",    
-"welcomeFiles":["/user/normalUser_home.jag"],
+"displayName":"Hardware Repository",    
+"welcomeFiles":["user/normalUser_home"],
 "urlMappings" : [
 
 {
