changed some styles

--- a/jaggery.conf
+++ b/jaggery.conf
@@ -1,6 +1,6 @@
 {
 "displayName":"Hardware Repository",    
-"welcomeFiles":["user/normalUser_home"],
+"welcomeFiles":["user/normalUser_home.jag"],
 "urlMappings" : [
 
 {
