--- a/jaggery.conf
+++ b/jaggery.conf
@@ -4,6 +4,10 @@
 "urlMappings" : [
 
 {
+	"url" : "/User/*",
+	"path" : "/controller/input.jag"
+},
+{
 	"url" : "/adminhome",
 	"path" : "/admin/admin_home.jag"
 },
