Functionalities working -needs tests

--- a/jaggery.conf
+++ b/jaggery.conf
@@ -1,12 +1,8 @@
 {
 "displayName":"Hardware Repository",    
-"welcomeFiles":["user/normalUser_home.jag"],
+"welcomeFiles":["index.jag"],
 "urlMappings" : [
 
-{
-	"url" : "/server/user/*",
-	"path" : "/controller/input.jag"
-},
 {
 	"url" : "/adminhome",
 	"path" : "/admin/admin_home.jag"
@@ -53,6 +49,11 @@
 {
 	"url" : "/auth",
 	"path" : "/acs.jag"
+}
+,
+{
+	"url" : "/server/user/*",
+	"path" : "/controller/input.jag"
 }
 ,
 {
