--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "ssoConfiguration": {
         "enabled": true,
         "issuer": "hwrepo",
-        "identityProviderURL": "https://localhost:9444/samlsso",
+        "identityProviderURL": "https://hwrepo.private.wso2.com/samlsso",
         "keyStorePassword": "wso2carbon",
         "identityAlias": "wso2carbon",
         "responseSigningEnabled": "true",
