performance enhanced - tested ready to deploy

--- a/jaggery.conf
+++ b/jaggery.conf
@@ -1,6 +1,6 @@
 {
 "displayName":"Hardware Repository",    
-"welcomeFiles":["index.jag"],
+"welcomeFiles":["user/normalUser_home.jag"],
 "urlMappings" : [
 
 {
