--- a/jaggery.conf
+++ b/jaggery.conf
@@ -5,8 +5,8 @@
 "urlMappings" : [
 
 {
-	"url" : "adminhome",
-	"path" : "admin/admin_home.jag"
+	"url" : "/adminhome",
+	"path" : "/admin/admin_home.jag"
 },
 {
 	"url" : "/userhome",
