Updated all auth related files

--- a/jaggery.conf
+++ b/jaggery.conf
@@ -70,5 +70,10 @@
 	"url" : "/userrequests",
 	"path" : "/user/normalUser_requests.jag"
 }
+,
+{
+	"url" : "/header",
+	"path" : "/headerHandler.jag"
+}
 ]
 }
